--- a/static/css/default.css
+++ b/static/css/default.css
@@ -25,8 +25,8 @@ body {
 
 .result {
   position: fixed;
-  top: 0px;
-  /* left: 55%; */
+  /* top: 0px; */
+  left: 55%;
   font-size: 400px;
 }
 
